src/css/styles.css
* {
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
}

body {
  background-size: 40px 40px;
  background-image:
    linear-gradient(to right, rgba(128, 128, 128, 0.045) 1px, transparent 1px),
    linear-gradient(to bottom, rgba(128, 128, 128, 0.045) 1px, transparent 1px);
}

body {
  scroll-behavior: smooth;
}

main {
  max-width: 1920px;
  margin: 0 auto;
}

.section-1 {
  width: 75%;
  margin: 0 auto;
  margin-top: 150px;
}

.top-btn button {
  padding: 10px 15px;
  border-radius: 50px;
  border: 1px solid #F8A8C5;
  background: none;
  color: #000000;
  font-style: italic;
  cursor: pointer;
  transition: 0.3s;
}

.top-btn button:hover {
  color: #ffffff;
  background-color: #F8A8C5;
}

.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.introduction-container {
  line-height: 1.5;
}

.introduction-container h1 {
  font-size: 50px;
  font-weight: 900;
  color: #F8A8C5;
  margin-top: 20px;
  margin-bottom: 20px;
}

.intro-style {
  color: #F8A8C5;
  font-weight: 800;
  font-style: italic;
}

.introduction-container p {
  max-width: 58ch;
  font-size: 16px;
}

#gap-paragraph {
  margin-top: 20px;
  margin-bottom: 20px;
}

#socials-gap {
  margin-bottom: 12px;
}

/* hover effect img */

.chaewon {
  position: relative;
  cursor: pointer;
}

.layer {
  display: flex;
  position: absolute;
  opacity: 0;
  top: 50%;
  left: 50%;
  text-align: center;
  font-weight: 800;
  color: white;
  font-size: 19px;
  letter-spacing: 1.5;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transition: 0.5s ease;
}

.layer a {
  text-decoration: none;
  color: white;
}

.chaewon:hover .layer {
  opacity: 1;
}

.chaewon:hover img {
  filter: brightness(70%);
  background-color: white;
}

.chaewon img {
  width: 600px;
  border-radius: 10px;
  transition: 0.5s ease;
}

/* -----hover effect img end----- */

.socials ul {
  display: flex;
  align-items: center;
  gap: 20px;
}

.socials ul li {
  list-style: none;
}

.socials ul li a {
  text-decoration: none;
  color: #F8A8C5;
  font-size: 30px;
  transition: 0.3s;
}

.socials ul li a:hover {
  opacity: 0.7;
}

.socials ul li a:active {
  opacity: 0.3;
}

/* skills */

.skills {
  width: 75%;
  margin: 0 auto;
  margin-top: 150px;
}

.header-skills {
  color: #F8A8C5;
  transform: translateY(20px);
  opacity: 0;
  transition: 1s ease;
}

.skills hr {
  margin-top: 20px;
  margin-bottom: 20px;
}

.header-skills h3 {
  margin-top: 20px;
}

.software {
  transform: translateY(20px);
  opacity: 0;
  transition: 1s ease;
}

.software ul {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 25px;
}

.software ul li {
  display: flex;
  align-items: center;
  list-style: none;
  background-color: #ffffff;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.40);
  padding: 10px;
  padding-right: 150px;
  border-radius: 5px;
  width: 169.4px;
}

/* some things i built */

.projects {
  width: 75%;
  margin: 0 auto;
  margin-top: 150px;
  margin-bottom: 150px;
}

.main-container {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 40px;
}

.header {
  margin-bottom: 35px;
  color: #F8A8C5;
  transform: translateY(20px);
  opacity: 0;
  transition: 1s ease;
}

.paragraph {
  position: relative;
  flex-grow: 1;
  padding: 20px;
  border-radius: 5px;
  background-color: #ffffff;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.40);
  transform: translateY(20px);
  z-index: 1;
  opacity: 0;
  transition: 1s ease;
}

.paragraph--visible {
  transform: translateY(0);
  opacity: 1;
}

.paragraph::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: transparent;
  border-radius: 5px;
  transition: transform 0.2s, background-color 0.2s;
  z-index: -1;
}

.paragraph:hover::before {
  transform: scale(1.07);
  background-color: #fcc5db;
}

.paragraph p {
  line-height: 1.5;
  max-width: 72ch;
  font-size: 14px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.paragraph ul {
  display: flex;
  gap: 15px;
}

.paragraph ul li {
  list-style: none;
  font-size: 12px;
  background-color: #F8A8C5;
  padding: 5px 10px;
  border-radius: 50px;
}

/* anime */

.anime {
  width: 75%;
  margin: 0 auto;
}

.anime-header {
  color: #F8A8C5;
  margin-bottom: 35px;
}

.movies-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 150px;
}

.movies {
  margin-bottom: auto;
  background: #ffffff;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.40);
  border-radius: 5px;
}

.movies img {
  width: 440px;
  height: 250px;
  object-fit: cover;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  cursor: pointer;
  transition: 0.5s ease;
}

.movies h3 {
  margin: 10px;
}

.movies p {
  font-size: 14px;
  line-height: 1.5;
  max-width: 48ch;
  margin: 10px;
}

.movies img:hover {
  filter: brightness(80%);
}

.movies button {
  color: #ffffff;
  background-color: #F8A8C5;
  border: none;
  border-radius: 5px;
  margin: 10px;
  padding: 10px;
  cursor: pointer;
  transition: 0.5s;
}

.movies button:hover {
  opacity: 0.8;
}

.movies button:active {
  opacity: 0.3;
}

.old-website {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
}

.old-website p, .old-website a {
  text-decoration: none;
  font-size: 12px;
}

.old-website a {
  color: #F8A8C5;
}


/* media queries */


@media (max-width: 2000px) {

  .software ul li {
    width: 280px;
    white-space: nowrap;
  }

}

@media (max-width: 1860px) {

  .paragraph p {
    max-width: 69ch;
  }

  .software ul li {
    width: 270px;
  }

}

@media (max-width: 1840px) {

  .movies {
    width: min-content;
  }

  .movies img {
    width: 430px;
  }

}

@media (max-width: 1790px) {

  .software ul li {
    width: 250px;
  }

}

@media (max-width: 1780px) {

  .paragraph p {
    max-width: 68ch;
  }

}

@media (max-width: 1760px) {

  .paragraph p {
    max-width: 67ch;
  }

}

@media (max-width: 1740px) {

  .paragraph p {
    max-width: 65ch;
  }

}

@media (max-width: 1760px) {

  .software ul li {
    width: 235px;
  }

  .movies {
    width: min-content;
  }

  .movies img {
    width: 400px;
  }

}

@media (max-width: 1690px) {

  .paragraph p {
    max-width: 62ch;
  }

  .software ul li {
    width: 220px;
  }

}

@media (max-width: 1660px) {

  .movies {
    width: min-content;
  }

  .movies img {
    width: 380px;
  }

}

@media (max-width: 1620px) {

  .paragraph p {
    max-width: 58ch;
  }

}

@media (max-width: 1600px) {

  .software ul li {
    width: 210px;
  }

}

@media (max-width: 1550px) {

  .paragraph p {
    max-width: 55ch;
  }

  .software ul li {
    width: 200.3px;
  }

  .movies {
    width: min-content;
  }

  .movies img {
    width: 370px;
  }

}

@media (max-width: 1520px) {

  .software ul li {
    width: 190px;
  }

  .movies {
    width: min-content;
  }

  .movies img {
    width: 350px;
  }

}

@media (max-width: 1470px) {

  .software ul li {
    width: 170px;
  }

}

@media (max-width: 1460px) {

  .chaewon img {
    width: 550px;
  }

  .paragraph p {
    max-width: 50ch;
  }

  .movies {
    max-width: 37ch;
  }

  .movies img {
    width: min-content;
  }

  .movies img {
    width: 330px;
  }

}

@media (max-width: 1390px) {

  .software ul li {
    width: 150px;
  }

}

@media (max-width: 1390px) {

  .movies-container {
    gap: 50px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 470px;
  }

  #movie-center {
    margin: 0 auto;
  }

}

@media (max-width: 1340px) {

  .paragraph p {
    max-width: 45ch;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 440px;
  }

}

@media (max-width: 1310px) {

  .paragraph p {
    max-width: 45ch;
  }

  .software ul li {
    width: 130px;
  }

  .chaewon img {
    width: 450px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 420px;
  }

}

@media (max-width: 1230px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 270px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 390px;
  }

}

@media (max-width: 1180px) {

  .top-btn button {
    font-size: 12px;
  }

  .introduction-container h1 {
    font-size: 45px;
  }

  .introduction-container p {
    font-size: 14px;
  }

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 250px;
  }

  .movies {
    max-width: 37ch;
  }

  .movies img {
    width: 370px;
  }

}

@media (max-width: 1130px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 230px;
  }

  .movies {
    max-width: 37ch;
  }

  .movies img {
    width: 370px;
  }

}

@media (max-width: 1080px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 210px;
  }

  .chaewon img {
    width: 350px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 340px;
  }

}

@media (max-width: 1020px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 190px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 315px;
  }

}

@media (max-width: 970px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 170px;
  }

  .anime-header {
    display: flex;
    justify-content: center;
  }

  .movies-container {
    justify-content: center;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 500px;
  }

}

@media (max-width: 920px) {

  .main-container {
    flex-direction: column;
  }

  .paragraph p {
    max-width: 100ch;
  }

  .software ul li {
    width: 150px;
  }

}

@media (max-width: 860px) {

  .software ul li {
    width: 130px;
  }

}

@media (max-width: 810px) {

  .section-1 {
    margin-top: 100px;
  }

  .container {
    flex-direction: column;
  }

  .socials ul {
    margin-bottom: 50px;
  }

  .software ul li {
    width: 110px;
  }

}

@media (max-width: 755px) {

  .software ul li {
    width: 90px;
  }

}

@media (max-width: 705px) {

  .software ul li {
    width: 75px;
  }

}

@media (max-width: 665px) {

  .software ul li {
    width: 65px;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 400px;
  }

}

@media (max-width: 630px) {

  .software ul li {
    width: 50px;
  }

}

@media (max-width: 595px) {

  .software ul {
    flex-direction: column;
  }

  .software ul li {
    width: auto;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 370px;
  }


  @media (max-width: 535px) {

    .anime-header {
      font-size: 14px;
      white-space: nowrap;
    }

    .movies {
      max-width: min-content;
    }
  
    .movies img {
      width: 350px;
    }

    .old-website {
      text-align: center;
    }
  
  }
}

@media (max-width: 500px) {

  .anime-header {
    font-size: 14px;
    white-space: nowrap;
  }

  .movies {
    max-width: min-content;
  }

  .movies img {
    width: 305px;
  }

  .old-website {
    text-align: center;
  }

}

